syntax = "proto3";

package linuxcnc.status;

option java_package = "ro.dragossusi.proto.linuxcnc.status";
option java_multiple_files = true;

message JointStatus {
  /**
   * EMC_JOINT_LINEAR; EMC_JOINT_ANGULAR
   */
  bool joint_type = 1;
  /**
   * Units per mm - linear; or degrees - angular
   */
  double units = 2;
  double backlash = 3;
  double min_position_limit = 4;
  double max_position_limit = 5;

  double min_following_error = 6;
  double max_following_error = 7;

  double current_following_error = 8;
  /**
   * Magnitude of max following error.
   */
  double current_following_error_high_mark = 9;

  double commanded_output_position = 10;

  double current_input_position = 11;
  double current_velocity = 12;
  
  bool in_position = 13;

  bool homing = 14;
  bool homed = 15;

  bool amp_fault = 16;
  bool enabled = 17;

  bool min_soft_limit_exceeded = 18;
  bool max_soft_limit_exceeded = 19;

  bool min_hard_limit_exceeded = 20;
  bool max_hard_limit_exceeded = 21;
  
  bool overriding_limits = 22;
}