syntax = "proto3";

package linuxcnc.status;

import "proto/status/position.proto";
import "proto/status/length_unit.proto";

option java_package = "ro.dragossusi.proto.linuxcnc.status";
option java_multiple_files = true;

enum TaskMode {
  TaskModeManual = 0;
  TaskModeAuto = 1;
  TaskModeMDI = 2;
}

enum TaskState {
  EStop = 0;
  EStopReset = 1;
  MachineOff = 2;
  MachineOn = 3;
}

enum TaskExecState {
  TaskExecError = 0;
  TaskExecDone = 1;
  TaskExecWait4Motion = 2;
  TaskExecWait4MotionQueue = 3;
  TaskExecWait4IO = 4;
  TaskExecWait4MotionAndIO = 5;
  TaskExecWait4Delay = 6;
  TaskExecWait4SystemCMD = 7;
  TaskExecWait4SpindleOrientation = 8;
}

enum InterpreterState {
  Idle = 0;
  Reading = 1;
  Paused = 2;
  Waiting = 3;
}

message ActiveCodes {
  repeated float g_codes = 1;
  repeated float m_codes = 2;
}

message TaskStatus {
  TaskMode taskMode = 1;
  TaskState taskState = 2;
  TaskExecState execState = 3;
  InterpreterState interpreterState = 4;
  /**
   * Current subroutine level
   * 0 - if not in a subroutine; > 0 otherwise
   */
  int32 subroutineCallLevel = 5;
  /**
   * The line motion is executing (may lag)
   */
  int32 motionLine = 6;
  /**
  *
  */
  int32 currentLine = 7;
  /**
   * The line interpreter has read to
   */
  int32 readLine = 8;
  /**
   * If true; it means stop on M1
   */
  bool isOptionalStopEnabled = 9;
  /**
   * If true; it means ignore lines starting with '/'
   */
  bool isBlockDeleteEnabled = 10;
  /**
   * Timeout happened on digital input
   */
  bool isDigitalInputTimeout = 11;
  optional string loadedFile = 12;
  optional string command = 13;
  /**
   * In user units; currently active
   */
  Position g5xOffset = 14;
  int32 g5xIndex = 15;
  Position g92Offset = 16;
  double rotationXY = 17;
  Position toolOffset = 18;
  ActiveCodes activeCodes = 19;
  /**
   * Not sure how to interpret this double
   */
  repeated double activeSettings = 20;

  LengthUnit programUnits = 21;

  /**
   * The return value from rs274ngc function; only
   * useful for new interpreter
   */
  int32 intepreterErrorCode = 22;
  bool isTaskPaused = 23;
  /**
   * Delay time left for G4 or M66 and others that I
   * don't know if they exist.
   */
  double delayLeft = 24;
  /**
   * Current length of the MDI input queue.
   */
  int32 mdiInputQueue = 25;
}